# products_cr

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
products_cr/: asgi.py  settings.py  urls.py  wsgi.py
products_cr/products/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
products_cr/products/migrations/: 0001_initial.py
products_cr/products/test_data/: products.json
products_cr/templates/products/: index.html
static/css/: styles.css
static/js/: script.js
